2013-03-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/index.php, mobile/operation/events.php,
	mobile/operation/alerts.php, include/functions_agents.php,
	include/functions_alerts.php,
	operation/agentes/alerts_status.functions.php: added first version
	of alert view.

2013-03-20  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Added support for braa_retries.

2013-03-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/events.php, mobile/include/ui.class.php,
	mobile/index.php: added first version of events section.
	
	* include/functions_incidents.php, include/functions_users.php,
	include/functions.php, include/functions_groups.php,
	include/functions_events.php, include/functions_html.php,
	operation/events/events.build_table.php,
	operation/events/events.build_query.php,
	operation/events/events_list.php: some changes for interact with
	mobile version.

2013-03-20  Mario Pulido <mario.pulido@artica.es>
	
	* godmode/setup/setup_general.php: Add help tip in Timezone Setup

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Disable auto-refresh when reset
	  operations are executed.

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Added an option to reset
	  counts.

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Updated and fixed
	  some column types.

	* include/functions_alerts.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql: Added support for on-demand module status
	  calculations.

2013-03-18  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_performance.php,
	include/help/ja/help_plugin_policy.php: Added new help files.
	
2013-03-16  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb_data.sql, pandoradb.data.postgreSQL.sql,